--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                 <div class="lotus"></div>
             </div>
             <div class="logo-text">Hội Hướng</div>
-            <div class="subtitle">A Global Movement Rooted in Love, Compassion, and Remembrance</div>
+            <div class="subtitle">A Global Movement Rooted in Love and Remembrance</div>
         </header>
 
         <div class="hero">
@@ -462,7 +462,7 @@
                 <div class="cover-art">
                     <div class="cover-title">Nguyên Tâm</div>
                     <div class="cover-subtitle">The Heart That Shaped Me</div>
-                    <div class="cover-author">A Memoir by Hoihuong</div>
+                    <div class="cover-author">A Memoir by Nguyên Thủy</div>
                 </div>
             </div>
             <div class="hero-content">
@@ -504,14 +504,14 @@
 
         <div class="tribute">
             <div class="tribute-content">
-                "In the garden of my heart, my first love, my mother planted seeds of love, watered them with tears of sacrifice, and nurtured them with sunlight from her consciousness. Though she has returned to the earth, the blossoms of her love continue to unfold with each season of my life, perfuming the world with her eternal presence."
-                <div class="tribute-author">— From "Nguyên Tâm - The Heart That Shaped Me"</div>
+                "In the garden of my heart, my mother, my first love, planted seeds of love and compassion, watered them with tears of sacrifice, and nurtured them with sunlight from her consciousness. Though she is attaining the wisdom of the Dharma in The Pure Land, the blossoms of her love continue to unfold with each season of my life, perfuming the world with her eternal presence."
+                <div class="tribute-author">— Nguyên Thủy, "Nguyên Tâm - The Heart That Shaped Me"</div>
             </div>
         </div>
 
         <div class="cta">
             <h2 class="cta-title">Join the Awakening</h2>
-            <p class="cta-subtitle">Be among the first to know when "Nguyên Tâm - The Heart That Shaped Me" is released and the Hội Hướng Movement begins</p>
+            <p class="cta-subtitle">Be among the first to know when "Nguyên Tâm" is released and the Hội Hướng Movement begins</p>
             
             <a href="#" class="btn">Notify Me on Release Day</a>
             <a href="#" class="btn btn-outline">Share Your Story</a>
@@ -530,7 +530,7 @@
         </div>
         
         <div class="copyright">
-            &copy; 2025 Hội Hướng Global Movement. "Nguyên Tâm - The Heart That Shaped Me" is a tribute to maternal love and legacy.
+            &copy; 2025 Hội Hướng Global Movement. "Nguyên Tâm - The Heart That Shaped Me" by Nguyên Thủy is a tribute to maternal love and legacy.
         </div>
     </div>
 
