--- a/index.html
+++ b/index.html
@@ -513,14 +513,15 @@
 
         <div class="tribute">
             <div class="tribute-content">
-                "True merit lives in the spaces between grand gestures:in steam rising from a shared bowl of cháo,in crayon butterflies drawn by small hands,in the unbearable courage to chant through tears.This is how we turn altars into action—not by escaping the world,but by hallowing its every breath.For in the soil of the mundane,amid bus transfers and grief and bánh bò,the lotus of enlightenment takes root." "For my Beloved mother, my first love, Nguyên Tâm (1947-2024) Who taught us that liberation smells of tiger balm,tastes of bún riêu,and sounds like a lullaby hummed between laundry loads.Your lotus blooms in every act of love we dedicate."
+                "True merit lives in the spaces between grand gestures:in steam rising from a shared bowl of cháo, in crayon butterflies drawn by small hands, in the unbearable courage to chant through tears. This is how we turn altars into action—not by escaping the world, but by hallowing its every breath. For in the soil of the mundane, amid bus transfers and grief and bánh bò, the lotus of enlightenment takes root." 
+                "For my Beloved mother, my first love, Nguyên Tâm (1947-2024) Who taught us that liberation smells of tiger balm, tastes of bún riêu, and sounds like a lullaby hummed between laundry loads. Your lotus blooms in every act of love we dedicate."
                 <div class="tribute-author">— Nguyên Thủy, "Nguyên Tâm - The Heart That Shaped Me"</div>
             </div>
         </div>
 
         <div class="cta">
             <h2 class="cta-title">Join the Awakening</h2>
-            <p class="cta-subtitle">Be among the first to know when "Nguyên Tâm" is released and the Hội Hướng Movement begins</p>
+            <p class="cta-subtitle">Be among the first to know when "Nguyên Tâm - The Heart That Shaped Me" is released and the Hội Hướng Movement begins</p>
             
             <a href="#" class="btn">Notify Me on Release Day</a>
             <a href="#" class="btn btn-outline">Share Your Story</a>
