--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
 
         <div class="movement">
             <h2 class="global-title">The Global Hội Hướng Movement</h2>
-            <p>Born from the pages of "Nguyên Tâm", the Hội Hướng Movement will inspire a worldwide awakening to the power of:</p>
+            <p>Born from the pages of "Nguyên Tâm - The Heart That Shaped Me", the Hội Hướng Movement will inspire a worldwide awakening to the power of:</p>
             
             <div class="movement-steps">
                 <div class="step">
@@ -513,7 +513,7 @@
 
         <div class="tribute">
             <div class="tribute-content">
-                "True merit lives in the spaces between grand gestures:in steam rising from a shared bowl of cháo, in crayon butterflies drawn by small hands, in the unbearable courage to chant through tears. This is how we turn altars into action—not by escaping the world, but by hallowing its every breath. For in the soil of the mundane, amid bus transfers and grief and bánh bò, the lotus of enlightenment takes root." 
+                "True merit lives in the spaces between grand gestures: in steam rising from a shared bowl of cháo, in crayon butterflies drawn by small hands, in the unbearable courage to chant through tears. This is how we turn altars into action—not by escaping the world, but by hallowing its every breath. For in the soil of the mundane, amid bus transfers and grief and bánh bò, the lotus of enlightenment takes root." 
                 "For my Beloved mother, my first love, Nguyên Tâm (1947-2024) Who taught us that liberation smells of tiger balm, tastes of bún riêu, and sounds like a lullaby hummed between laundry loads. Your lotus blooms in every act of love we dedicate."
                 <div class="tribute-author">— Nguyên Thủy, "Nguyên Tâm - The Heart That Shaped Me"</div>
             </div>
