--- a/index.html
+++ b/index.html
@@ -1533,7 +1533,7 @@
             
             <div class="cta-content">
                 <h2 class="cta-title">Join the Awakening</h2>
-                <p class="cta-subtitle">Be among the first to know when “Nguyên Tâm - The Heart That Shaped Me” is released and the Hội Hướng Movement begins</p>
+                <p class="cta-subtitle">Be among the first to know when “Nguyên Tâm—The Heart That Shaped Me” is released and the Hội Hướng Movement begins</p>
                 
                 <a href="#" class="btn">Notify Me on Release Day</a>
                 <a href="#" class="btn btn-outline">Share Your Story</a>
