--- a/index.html
+++ b/index.html
@@ -1450,7 +1450,7 @@
                         </svg>
                     </div>
                 </div>
-                <p>In loving memory of my mother, this is my love letter to the woman who taught me that love itself can be both salvation and suffering, and that sometimes the greatest courage is found not in fighting back, but in continuing to love despite everything that tries to stop you. I present “Nguyên Tâm - The Heart That Shaped Me”.</p>
+                <p>In loving memory of my mother, this is my love letter to the woman who taught me that love itself can be both salvation and suffering, and that sometimes the greatest courage is found not in fighting back, but in continuing to love despite everything that tries to stop you. I present “Nguyên Tâm—The Heart That Shaped Me”.</p>
                 <p>This memoir is more than my mother’s journey; it’s an invitation to discover the transformative power of maternal love and its capacity to shape lives across generations.</p>
                 <p>As we prepare to release this heartfelt tribute, we stand at the threshold of a global movement - a movement that seeks to honor the profound influence of those who shape our hearts and guide our paths.</p>
                 <p>The Hội Hướng Movement will awaken the world to the sacred connections that bind us, the legacies that sustain us, and the love that transcends even death itself.</p>
