--- a/index.html
+++ b/index.html
@@ -1411,7 +1411,7 @@
             <div class="book-cover">
                 <div class="cover-art">
                     <div class="cover-title">Nguyên Tâm</div>
-                    <div class="cover-subtitle">“The Heart That Shaped Me”</div>
+                    <div class="cover-subtitle">"The Heart That Shaped Me"</div>
                     <div class="cover-author">A Memoir by Nguyên Thủy</div>
                 </div>
             </div>
