--- a/index.html
+++ b/index.html
@@ -1542,7 +1542,7 @@
         
         <!-- Merit Trust Section -->
         <div class="merit-trust">
-            <div class="trust-title">Má&#8217;s Merit Trust</div>
+            <div class="trust-title">Má<span style="letter-spacing: 0;">&#8217;</span>s Merit Trust</div>
             
             <div class="merit-flow">
                 <div class="flow-step">
