--- a/index.html
+++ b/index.html
@@ -1543,7 +1543,7 @@
         
         <!-- Merit Trust Section -->
         <div class="merit-trust">
-            <div class="trust-title">Má<span style="letter-spacing:-0.15em;">&#8217;</span>s Merit Trust</div>
+            <div class="trust-title">Má<span style="display:inline-block;transform:translateX(-0.15em);">&#8217;</span>s Merit Trust</div>
             
             <div class="merit-flow">
                 <div class="flow-step">
