--- a/index.html
+++ b/index.html
@@ -1543,7 +1543,7 @@
         
         <!-- Merit Trust Section -->
         <div class="merit-trust">
-            <div class="trust-title">Má&#8217;s Merit Trust</div>
+           <div class="trust-title">Má<span style="font-family:'Gentium Plus',serif;">&#8217;</span>s Merit Trust</div>
             
             <div class="merit-flow">
                 <div class="flow-step">
